--- a/web/package.json
+++ b/web/package.json
@@ -36,5 +36,6 @@
     "autoprefixer": "^9.7.4",
     "postcss-cli": "^7.1.0",
     "tailwindcss": "^1.2.0"
-  }
+  },
+  "proxy": "http://backend:5000"
 }
