--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,9 @@ services:
     links:
       - backend
     ports:
-      - '80:3000'
+      - "80:3000"
+    volumes:
+      - ./web:/app
     environment:
       - NODE_ENV=development
     networks:
